<resources>
    <string-array name="roles">
        <item>Admin</item>
        <item>User</item>
        <item>Guest</item>
    </string-array>

    <string name="app_name">CloudAPI</string>

    <!-- Intent extras -->
    <string name="auth_token">auth_token</string>
    <string name="password_reset_info">We\'ve emailed you instructions for setting your password. If an account exists
        with the email you entered.
        You should receive them shortly.If you don\'t receive an email, please make sure you\'ve entered the address you
        registered with,
        and check your spam folder.
    </string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="return_to_launcher_fragment">Return</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="email_field">Email</string>
    <string name="field_password">Password</string>
    <string name="field_login">Login</string>
    <string name="field_username">Username</string>
    <string name="field_confirm_password">Confirm password</string>
    <string name="field_register">Register</string>
    <string name="network_error_response">Error</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="my_blogs">My Blogs</string>
    <string name="home">Home</string>
    <string name="create">Create</string>

    <string name="fragment_create_blog">Create</string>
    <string name="fragment_update_blog">Update</string>
    <string name="fragment_view_blog">View</string>
    <string name="fragment_account">Account</string>
    <string name="fragment_change_password">Change password</string>
    <string name="fragment_task">Task</string>
    <string name="save_changes">Save changes</string>
    <string name="fragment_update_account">Update account</string>
    <string name="arg_email">arg_email</string>
    <string name="arg_username">arg_username</string>

    <string name="enter_a_username">Enter a username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="current_password">Current password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="your_email">Your email</string>
    <string name="your_username">Your username</string>
    <string name="register">Insert an email of a new user</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="update_password">Update password</string>
    <string name="filter_asc">ASC</string>
    <string name="filter_desc">DESC</string>
    <string name="filter_author">Author</string>
    <string name="filter_date_created">Created date</string>
    <string name="filter_date_modified">Modified date</string>
    <string name="asc_desc">Ascending or descending order</string>
    <string name="author_or_date">Filter by author or date</string>
    <string name="filter_options">Filter options</string>
    <string name="publish">Publish</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="are_you_sure_publish">Are you sure you want to publish this?</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this? This can\'t be un-done.</string>
    <string name="text_info">Info</string>
    <string name="delete">Delete</string>

    <string name="AuthNavHost">AuthNavHost</string>
    <string name="AccountFragmentFactory">AccountFragmentFactory</string>
    <string name="BlogFragmentFactory">BlogFragmentFactory</string>
    <string name="CreateBlogFragmentFactory">CreateBlogFragmentFactory</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="launcher">Launcher</string>
    <string name="login">Login</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_forgot_password">Forgot password</string>
    <string name="process_death_state">process_death_state</string>
    <string name="invalid_login_credentials">Invalid login</string>
    <string name="write_a_task_title">Write a task title...</string>
    <string name="the_title_of_a_task">The Title of a Task</string>
    <string name="touch_to_change_image">Touch to change image</string>
    <string name="this_is_some_task_descripton">This is some task description</string>
    <string name="user_name">John Doe</string>
    <string name="create_task">Create</string>
    <string name="write_some_content">Write some content...</string>
    <string name="owner_name">Mitch Tabian</string>
    <string name="updated">Updated on July 23, 2019</string>
    <string name="no_more_results">No more results...</string>
    <string name="apply">Apply</string>

    <!-- Dialogs -->
    <string name="error_email_exists">User with this email is already registered.</string>
    <string name="error_passwords_do_not_match">Passwords mismatch. Please try again.</string>
    <string name="error_name_already_exists">User with this name already exists.</string>
    <string name="error_invalid_email">Email is in wrong format. Please try again.</string>
    <string name="error_password_too_short">Password is too short.</string>
    <string name="error_new_password_too_short">New password is too short.</string>
    <string name="error_unable_to_authenticate">Unable to authenticate.</string>
    <string name="error_invalid_user_updates">Invalid user updates</string>
    <string name="error_invalid_email_updates">Invalid email updates.</string>
    <string name="error_incorrect_current_password">Current password is incorrect.</string>
    <string name="error_incorrect_password_mismatch">Passwords do not match.</string>
    <string name="error_no_query_pagination_result">No query pagination result.</string>
    <string name="error_task_does_not_exist_on_the_server">Task does not exist on the server.</string>
    <string name="error_invalid_updates">Invalid updates.</string>
    <string name="test"  >Invalid updates.</string>

    <string name="error_internal_server_error">Internal server error. Please try again.</string>


    <string name="response_user_update_success">User information update success.</string>
    <string name="response_task_created_success">Task created successfully.</string>
    <string name="response_task_updated_success">Task updated successfully.</string>
    <string name="response_task_deleted_success">Task deleted successfully.</string>
    <string name="response_task_owner_yes">You are the owner of the task.</string>
    <string name="response_task_owner_no">You are not the owner of the task.</string>


    <string name="response_password_reset_success">Success. Please close the browser window.</string>
    <string name="response_password_update_success">User password update success.</string>


    <string name="error_admin_already_exists">Unable to make a new account. Admin already exists!</string>
    <string name="error_role_not_admin">Unable to make changes. Logged in user is not admin.</string>


    <string name="all_users"  >Manage users</string>
    <string name="add_user"  >+</string>

    <string name="fragment_manage_users"  >Manage users</string>
    <string name="register_new_user"  >Register new user</string>
    <string name="role"  >User</string>
    <string name="name"  >Name</string>
    <string name="email"  >Email</string>
    <string name="role_field"  >Role</string>
    <string name="age_field"  >Age</string>
    <string name="updatedAt_field"  >Updated at</string>
    <string name="createdAt_field"  >Created at</string>
    <string name="enabled"  >Enabled</string>
    <string name="edit"  >Edit</string>
    <string name="usernameLabel"  >Username</string>


    <string name="error_user_does_not_exist_on_the_server" >That User does not exist on the server.</string>
    <string name="error_cant_register"  >ou do not have the right to register.</string>
    <string name="error_already_sent_registration_email"  >You have already sent an email for registration.</string>
    <string name="error_fill_all_fields">Please fill all fields.</string>


    <string name="pair_device" translatable="false">Pair new device</string>
    <string name="my_account" translatable="false">My account</string>

    <string name="fragment_settings" translatable="false">Settings</string>

    <string name="device" translatable="false">Device</string>
    <string name="find_devices" translatable="false">Find available devices</string>
    <string name="please_authenticate" translatable="false">Please authenticate</string>
    <string name="api" translatable="false">/api</string>



</resources>





















