<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/parent_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.auth.ForgotPasswordFragment">

	<WebView
			android:id="@+id/webview"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="visible" />

	<LinearLayout
			android:id="@+id/password_reset_done_container"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:orientation="vertical"
			android:padding="16dp"
			android:visibility="invisible">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/password_reset_email_sent"
				android:textColor="#000"
				android:textSize="25sp"

				/>

		<TextView
				android:id="@+id/password_reset_info"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/password_reset_info"
				android:textColor="#000" />

		<TextView
				android:id="@+id/return_to_launcher_fragment"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="10dp"
				android:background="#fff"
				android:text="@string/return_to_launcher_fragment"
				android:textColor="@color/link_blue"
				android:textSize="19sp" />


	</LinearLayout>


</FrameLayout>