<?xml version="1.0" encoding="utf-8"?>
<navigation
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/nav_account"
        app:startDestination="@id/accountFragment">

    <fragment android:id="@+id/accountFragment"
              android:name="com.codingwithmitch.openapi.ui.main.account.AccountFragment"
              android:label="@string/fragment_account"
              tools:layout="@layout/fragment_account">

        <action android:id="@+id/action_accountFragment_to_changePasswordFragment"
                app:destination="@id/changePasswordFragment"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"/>

        <action android:id="@+id/action_accountFragment_to_updateAccountFragment"
                app:destination="@id/updateAccountFragment"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"/>
    </fragment>

    <fragment android:id="@+id/changePasswordFragment"
              android:name="com.codingwithmitch.openapi.ui.main.account.ChangePasswordFragment"
              android:label="@string/fragment_change_password"
              tools:layout="@layout/fragment_change_password"/>


    <fragment android:id="@+id/updateAccountFragment"
              android:name="com.codingwithmitch.openapi.ui.main.account.UpdateAccountFragment"
              android:label="@string/fragment_update_account"
              tools:layout="@layout/fragment_update_account">


    </fragment>

</navigation>