<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.main.account.settings.SettingsFragment"
        android:fillViewport="true"
        android:background="#121212"

        >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/constraint_layout1"
            >

        <View android:layout_width="0.5dp"
                android:layout_height="0.5dp"
                android:focusableInTouchMode="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/focusable_view">
        </View>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="30dp"
                android:textSize="30sp"
                app:helperText="@string/email_field"
                app:helperTextTextColor="@color/white"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/focusable_view"
                app:layout_constraintVertical_chainStyle="packed">

            <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_email"
                    android:textColor="#EDEDED"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:padding="30dp"
                app:helperText="@string/field_username"
                app:helperTextTextColor="@color/white"
                android:id="@+id/username_input_layout"
                >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:hint="@string/your_username"
                    android:textColorHint="@color/white"
                    android:textColor="#EDEDED"
                    android:textSize="20sp"
                    />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:id="@+id/logout_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="140dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/main_button_drawable"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
                app:layout_constraintVertical_bias="0.81" />

        <TextView
                android:id="@+id/change_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@color/link_blue"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logout_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>







</ScrollView>
