<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.main.task.detail.ViewTaskFragment"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:background="#fff"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/task_image"
                android:id="@+id/task_title"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/the_title_of_a_task"
                android:textColor="#000"
                android:textSize="19sp"
                android:textStyle="bold"
                />

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/container1"
                android:id="@+id/task_image"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/task_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:id="@+id/container1"
                >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/task_owner"
                    android:text="@string/owner_name"
                    android:textColor="@color/grey5"
                    android:textSize="15sp"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/task_update_date"
                    android:text="@string/updated"
                    android:textColor="@color/grey5"
                    android:textSize="13sp"
                    android:layout_marginTop="10dp"
                    />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/grey4"
                    android:layout_marginTop="10dp"
                    >

            </View>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/task_description"
                    android:text="@string/this_is_some_task_descripton"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:layout_marginTop="20dp"
                    />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/grey4"
                    android:layout_marginTop="20dp"
                    >

            </View>


            <Button
                    android:id="@+id/delete_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/red_button_drawable"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="30dp"
                    android:visibility="invisible"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.core.widget.NestedScrollView>